--- a/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
+++ b/Materias/2S2020/PED_CE342/Turma_C/Turma_C.org
@@ -108,15 +108,15 @@ nv_keynesianos.drop(["Endereço de e-mail"], axis="columns", inplace=True)
 nv_keynesianos.set_index("RA", inplace=True)
 nv_keynesianos.columns = ["Resenha Novos Keynesianos"]
 
-ncm = pd.read_csv(
-    #    full_path +
-    "."
-    + "/Notas/NCM.csv"
-)[["Endereço de e-mail", "Nota"]]
-ncm["RA"] = [i[1:7] for i in ncm["Endereço de e-mail"]]
-ncm.drop(["Endereço de e-mail"], axis="columns", inplace=True)
-ncm.set_index("RA", inplace=True)
-ncm.columns = ["Resenha Regime de Metas"]
+# ncm = pd.read_csv(
+#     #    full_path +
+#     "."
+#     + "/Notas/NCM.csv"
+# )[["Endereço de e-mail", "Nota"]]
+# ncm["RA"] = [i[1:7] for i in ncm["Endereço de e-mail"]]
+# ncm.drop(["Endereço de e-mail"], axis="columns", inplace=True)
+# ncm.set_index("RA", inplace=True)
+# ncm.columns = ["Resenha Regime de Metas"]
 
 df = (
     min_df.reset_index()
@@ -140,16 +140,14 @@ df = (
     .merge(nv_keynesianos.reset_index(), how="left")
     .set_index("RA")
     .join(importar_ext(Turma=Turma, data="2020-11-30"), how="left", on="Nome")
-    .merge(ncm.reset_index(), how="left")
-    .set_index("RA")
+    # .merge(ncm.reset_index(), how="left")
+    # .set_index("RA")
 )
 df["Email"] = [
     df["Nome"][i][0] + str(df.index[i]) + "@dac.unicamp.br"
     for i in range(len(df.index))
 ]
 #+END_SRC
-
-#+RESULTS:
 
 
 
@@ -455,20 +453,6 @@ resultado
 #+END_SRC
 
 #+RESULTS:
-#+begin_example
-   RA Sorteados
-1        103034
-2        199967
-3        205151
-4        213549
-5        230645
-6        232568
-7        233566
-8        237856
-9        242328
-10       245099
-11       257876
-#+end_example
 #+begin_example
    RA Sorteados
 1        103034
@@ -822,7 +806,7 @@ df.loc["244207", "Resenha Novos Keynesianos"] = 0.0
 ** Notas                                                             :ignore:
 
 #+NAME:NCM
-#+BEGIN_SRC python :results table latex
+#+BEGIN_SRC python :results table latex :eval no
 print('\\begin{center}')
 print(
     df[["Resenha Regime de Metas"]].to_latex(
@@ -837,7 +821,7 @@ print('\end{center}')
 
 ** Gráficos                                                          :ignore:
 *** Notas
-#+BEGIN_SRC python :results graphics file :file ./figs/ncm.png
+#+BEGIN_SRC python :results graphics file :file ./figs/ncm.png :eval no
 fig, ax = plt.subplots(1,2, figsize=(8,5), sharey=True)
 sns.distplot(df['Resenha Regime de Metas'], hist=True, kde=True,
              bins=int(10), color = 'darkblue',
@@ -870,7 +854,7 @@ plt.close()
 
 
 *** Notas e Presença
-#+BEGIN_SRC python :results graphics file :file ./figs/ncm_presenca.png
+#+BEGIN_SRC python :results graphics file :file ./figs/ncm_presenca.png :eval no
 tmp = df.copy()
 
 tmp["Média presença"] = tmp[
@@ -920,28 +904,6 @@ print(resultado.to_latex())
 resultado
 #+END_SRC
 
-#+RESULTS:
-#+begin_export latex
-\begin{tabular}{ll}
-\toprule
-{} & RA Sorteados \\
-\midrule
-1  &       199735 \\
-2  &       206194 \\
-3  &       206883 \\
-4  &       212883 \\
-5  &       212900 \\
-6  &       218090 \\
-7  &       219613 \\
-8  &       231898 \\
-9  &       232395 \\
-10 &       232796 \\
-11 &       233335 \\
-12 &       238414 \\
-13 &       241430 \\
-\bottomrule
-\end{tabular}
-#+end_export
 
 *** Resultado Turnitin
 
@@ -996,8 +958,6 @@ plt.close()
 ** Lista de chamada com nota das resenhas                            :ignore:
 #+NAME:Lista
 #+BEGIN_SRC python :results table latex
-print('\\begin{center}\\begin{landscape}')
-print('\small\n\setlength\LTleft{0pt}\n\setlength\LTright{0pt}')
 print(
     df.to_latex(
         caption="Lista de presença e de notas",
@@ -1011,60 +971,56 @@ print('\end{landscape}\end{center}')
 
 #+RESULTS: Lista
 #+begin_export latex
-\begin{center}\begin{landscape}
-\small
-\setlength\LTleft{0pt}
-\setlength\LTright{0pt}
-\begin{longtable}{llrrrrrrrrl}
+\begin{longtable}{llrrrrrrrrrl}
 \caption{Lista de presença e de notas}\label{lista}\\
 \toprule
-{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &                   Email \\
-\textbf{RA    } &                                        &                       &             &             &             &                          &             &             &                            &                         \\
+{} &                                   Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &  2020-11-30 &                   Email \\
+\textbf{RA    } &                                        &                       &             &             &             &                          &             &             &                            &             &                         \\
 \midrule
 \endhead
 \midrule
-\multicolumn{11}{r}{{Continued on next page}} \\
+\multicolumn{12}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &       19.47 &                      5.0 &       57.50 &        0.00 &                        5.0 &  a230645@dac.unicamp.br \\
-\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &        6.19 &                      5.0 &           - &        5.88 &                        0.0 &  b213549@dac.unicamp.br \\
-\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &       93.81 &                      7.0 &       28.33 &       70.59 &                        5.0 &  b257748@dac.unicamp.br \\
-\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &       54.87 &                      5.0 &       70.00 &        0.00 &                        0.0 &  c232568@dac.unicamp.br \\
-\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &       91.15 &                      7.0 &           - &           - &                        0.0 &  d233566@dac.unicamp.br \\
-\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       18.33 &       11.76 &                        0.0 &  f215626@dac.unicamp.br \\
-\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &       29.17 &       76.47 &                          - &   f91108@dac.unicamp.br \\
-\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &           - &       76.47 &                        5.0 &  f234311@dac.unicamp.br \\
-\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      3.0 &        0.83 &        0.00 &                        0.0 &  g216397@dac.unicamp.br \\
-\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &       46.67 &       47.06 &                        0.0 &  g197474@dac.unicamp.br \\
-\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &           - &           - &                          - &  g234982@dac.unicamp.br \\
-\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &       17.65 &                        5.0 &  g235042@dac.unicamp.br \\
-\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &       30.00 &       82.35 &                        5.0 &  g197724@dac.unicamp.br \\
-\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &           - &           - &                          - &  g217350@dac.unicamp.br \\
-\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &           - &           - &                        0.0 &  g174154@dac.unicamp.br \\
-\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &           - &                      3.0 &           - &           - &                        0.0 &  j237534@dac.unicamp.br \\
-\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &       91.15 &                      5.0 &       90.83 &        0.00 &                        0.0 &  j237856@dac.unicamp.br \\
-\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &       82.30 &                      7.0 &       50.83 &        0.00 &                        7.0 &  j199967@dac.unicamp.br \\
-\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &       93.81 &                      5.0 &       93.33 &       70.59 &                        0.0 &  l103034@dac.unicamp.br \\
-\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &       14.16 &                      7.0 &       75.00 &       76.47 &                        0.0 &  l172577@dac.unicamp.br \\
-\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &       91.15 &                      5.0 &       50.83 &       76.47 &                        0.0 &  m159866@dac.unicamp.br \\
-\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &       18.58 &                     10.0 &       37.50 &        0.00 &                       10.0 &  m221896@dac.unicamp.br \\
-\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &       93.81 &                     10.0 &       83.33 &       70.59 &                       10.0 &  m257876@dac.unicamp.br \\
-\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &        0.00 &                        - &           - &           - &                          - &  m242087@dac.unicamp.br \\
-\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &        0.88 &                      7.0 &           - &           - &                        5.0 &  n242328@dac.unicamp.br \\
-\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       93.33 &       76.47 &                        0.0 &  p147614@dac.unicamp.br \\
-\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &           - &                        - &           - &           - &                          - &  r176104@dac.unicamp.br \\
-\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &  r205149@dac.unicamp.br \\
-\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &        4.42 &                      7.0 &           - &       76.47 &                        0.0 &  r205151@dac.unicamp.br \\
-\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &        0.00 &                      7.0 &           - &       64.71 &                        0.0 &  s244207@dac.unicamp.br \\
-\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &       61.06 &                      7.0 &       29.17 &       70.59 &                        5.0 &  t158425@dac.unicamp.br \\
-\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &       30.09 &                      7.0 &       24.17 &       64.71 &                        0.0 &  t257932@dac.unicamp.br \\
-\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &           - &                        0.0 &  v177964@dac.unicamp.br \\
-\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &       70.80 &                      7.0 &       25.00 &        0.00 &                        0.0 &  v245099@dac.unicamp.br \\
-\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &        2.65 &                      0.0 &       29.17 &        0.00 &                        0.0 &  v206806@dac.unicamp.br \\
-\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &           - &      100.00 &                        0.0 &  w225851@dac.unicamp.br \\
+\textbf{230645} &                    alice pereira dario &                  50.0 &       17.86 &        0.00 &       19.47 &                      5.0 &       57.50 &        0.00 &                        5.0 &        4.76 &  a230645@dac.unicamp.br \\
+\textbf{213549} &           beatriz helena toledo pastre &                  30.0 &        0.00 &        0.00 &        6.19 &                      5.0 &           - &        5.88 &                        0.0 &       80.95 &  b213549@dac.unicamp.br \\
+\textbf{257748} &             breno rivelino fima castro &                  50.0 &        7.14 &        5.31 &       93.81 &                      7.0 &       28.33 &       70.59 &                        5.0 &       80.00 &  b257748@dac.unicamp.br \\
+\textbf{232568} &                 caio cimino de almeida &                  70.0 &           - &        2.65 &       54.87 &                      5.0 &       70.00 &        0.00 &                        0.0 &       48.57 &  c232568@dac.unicamp.br \\
+\textbf{233566} &                 diego tabacof labriola &                  30.0 &        0.00 &        0.00 &       91.15 &                      7.0 &           - &           - &                        0.0 &           - &  d233566@dac.unicamp.br \\
+\textbf{215626} &                felipe barbosa de souza &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       18.33 &       11.76 &                        0.0 &       13.33 &  f215626@dac.unicamp.br \\
+\textbf{91108 } &                 felipe eboli sotorilli &                     - &        1.79 &        0.00 &       77.88 &                        - &       29.17 &       76.47 &                          - &       11.43 &   f91108@dac.unicamp.br \\
+\textbf{234311} &                  felipe rubbo aguilera &                  50.0 &       33.93 &        1.77 &       92.92 &                      5.0 &           - &       76.47 &                        5.0 &       42.86 &  f234311@dac.unicamp.br \\
+\textbf{216397} &                        gabriel pereira &                  30.0 &        0.00 &        0.88 &       76.11 &                      3.0 &        0.83 &        0.00 &                        0.0 &       28.57 &  g216397@dac.unicamp.br \\
+\textbf{197474} &                gabriel pereira jovetta &                  50.0 &        0.00 &        4.42 &       51.33 &                      5.0 &       46.67 &       47.06 &                        0.0 &        0.00 &  g197474@dac.unicamp.br \\
+\textbf{234982} &                 gabriel pereira santos &                   0.0 &           - &       13.27 &        0.00 &                      0.0 &           - &           - &                          - &           - &  g234982@dac.unicamp.br \\
+\textbf{235042} &                gabriel silva gonçalves &                   0.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &       17.65 &                        5.0 &       82.86 &  g235042@dac.unicamp.br \\
+\textbf{197724} &           gabriela santana das virgens &                  50.0 &        0.00 &        0.88 &       74.34 &                      5.0 &       30.00 &       82.35 &                        5.0 &       82.86 &  g197724@dac.unicamp.br \\
+\textbf{217350} &       guilherme yoshio agata domingues &                  30.0 &           - &           - &           - &                      0.0 &           - &           - &                          - &           - &  g217350@dac.unicamp.br \\
+\textbf{174154} &               gustavo josé lara campos &                  30.0 &        0.00 &        4.42 &       16.81 &                      0.0 &           - &           - &                        0.0 &           - &  g174154@dac.unicamp.br \\
+\textbf{237534} &         joao mateus rodrigues da silva &                  30.0 &           - &           - &           - &                      3.0 &           - &           - &                        0.0 &       11.43 &  j237534@dac.unicamp.br \\
+\textbf{237856} &        joão vitor dos santos rodrigues &                  50.0 &        1.79 &        0.00 &       91.15 &                      5.0 &       90.83 &        0.00 &                        0.0 &        0.00 &  j237856@dac.unicamp.br \\
+\textbf{199967} &                   jonas pereira cintra &                  70.0 &        0.00 &        3.54 &       82.30 &                      7.0 &       50.83 &        0.00 &                        7.0 &       82.86 &  j199967@dac.unicamp.br \\
+\textbf{103034} &  leonardo augusto de oliveira piovesan &                  50.0 &        0.00 &        0.00 &       93.81 &                      5.0 &       93.33 &       70.59 &                        0.0 &       89.52 &  l103034@dac.unicamp.br \\
+\textbf{172577} &                   lucas azevedo soares &                  50.0 &        2.68 &        5.31 &       14.16 &                      7.0 &       75.00 &       76.47 &                        0.0 &       87.62 &  l172577@dac.unicamp.br \\
+\textbf{159866} &              marcela chenfel dos anjos &                  50.0 &        0.89 &        0.00 &       91.15 &                      5.0 &       50.83 &       76.47 &                        0.0 &       33.33 &  m159866@dac.unicamp.br \\
+\textbf{221896} &               mariana sayuri silva doi &                  70.0 &       34.82 &        0.88 &       18.58 &                     10.0 &       37.50 &        0.00 &                       10.0 &        0.00 &  m221896@dac.unicamp.br \\
+\textbf{257876} &    maryana beatriz ventura de carvalho &                 100.0 &       67.86 &        0.88 &       93.81 &                     10.0 &       83.33 &       70.59 &                       10.0 &       81.90 &  m257876@dac.unicamp.br \\
+\textbf{242087} &                          miguel razera &                   0.0 &        0.89 &        1.77 &        0.00 &                        - &           - &           - &                          - &           - &  m242087@dac.unicamp.br \\
+\textbf{242328} &    natalia kimberlle tavares imperiano &                  50.0 &           - &           - &        0.88 &                      7.0 &           - &           - &                        5.0 &           - &  n242328@dac.unicamp.br \\
+\textbf{147614} &          pedro augusto de almeida rosa &                   0.0 &        0.00 &        0.00 &        0.00 &                      0.0 &       93.33 &       76.47 &                        0.0 &        0.00 &  p147614@dac.unicamp.br \\
+\textbf{176104} &              rafael da silva tomasella &                   0.0 &           - &           - &           - &                        - &           - &           - &                          - &           - &  r176104@dac.unicamp.br \\
+\textbf{205149} &                 raphaela freitas souza &                 100.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &  r205149@dac.unicamp.br \\
+\textbf{205151} &               raphaela prado francisco &                   0.0 &        0.89 &       47.79 &        4.42 &                      7.0 &           - &       76.47 &                        0.0 &       63.81 &  r205151@dac.unicamp.br \\
+\textbf{244207} &                 sanny alves dos santos &                  70.0 &        0.89 &        0.00 &        0.00 &                      7.0 &           - &       64.71 &                        0.0 &       85.71 &  s244207@dac.unicamp.br \\
+\textbf{158425} &                           tales alonso &                  50.0 &        0.89 &       61.95 &       61.06 &                      7.0 &       29.17 &       70.59 &                        5.0 &       19.05 &  t158425@dac.unicamp.br \\
+\textbf{257932} &              thaís monello de oliveira &                 100.0 &        0.89 &        0.00 &       30.09 &                      7.0 &       24.17 &       64.71 &                        0.0 &       86.67 &  t257932@dac.unicamp.br \\
+\textbf{177964} &               victor hugo alves duarte &                  70.0 &        0.00 &        0.00 &        0.00 &                      5.0 &           - &           - &                        0.0 &           - &  v177964@dac.unicamp.br \\
+\textbf{245099} &                            victor maia &                  50.0 &       16.07 &       53.98 &       70.80 &                      7.0 &       25.00 &        0.00 &                        0.0 &       43.81 &  v245099@dac.unicamp.br \\
+\textbf{206806} &            vinicius jeronimo capodalio &                  50.0 &        0.00 &        7.08 &        2.65 &                      0.0 &       29.17 &        0.00 &                        0.0 &       80.00 &  v206806@dac.unicamp.br \\
+\textbf{225851} &                william de sousa rabelo &                  50.0 &           - &           - &           - &                      0.0 &           - &      100.00 &                        0.0 &        0.00 &  w225851@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
 #+end_export
